--- a/panel/_styles/widgets.css
+++ b/panel/_styles/widgets.css
@@ -139,3 +139,55 @@ progress:not([value])::before {
   from {background-position: 0%}
   to {background-position: 100%}
 }
+
+div.loader:after {
+  content: "";
+  background: conic-gradient(
+    #f3f3f3 0 100%
+  );
+  border-radius: 50%;
+  -webkit-mask-image: radial-gradient(transparent 50%, rgba(0, 0, 0, 1) 50%);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+}
+
+div.loader.spin:after {
+  background: conic-gradient(
+    #3498db 25%,
+    #f3f3f3 0 50%
+  );
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.dot div {
+  height: 100%;
+  width: 100%;
+  border: 1px solid #444 !important;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.dot-filled div {
+  height: 100%;
+  width: 100%;
+  border: 1px solid #444 !important;
+  background-color: #444;
+  border-radius: 50%;
+  display: inline-block;
+}
