--- a/panel/template/material/material.html
+++ b/panel/template/material/material.html
@@ -26,7 +26,9 @@
       {% endfor %}
     </section>
     {% if busy %}
-	{{ embed(roots.busy_indicator) | indent(6) }}
+	<div class="busy-container">
+	  {{ embed(roots.busy_indicator) | indent(6) }}
+	</div>
 	{% endif %}
   </div>
 </header>
