--- a/panel/template/golden/golden.html
+++ b/panel/template/golden/golden.html
@@ -22,13 +22,27 @@
       {% endfor %}
     </section>
 	{% if busy %}
-	{{ embed(roots.busy_indicator) | indent(6) }}
+	<div class="pn-busy-container">
+	  {{ embed(roots.busy_indicator) | indent(6) }}
+	</div>
 	{% endif %}
   </div>
 </header>
 
 <div class="main-area header-adjust" id="main">
   <main class="main-content" id="main-content"></main>
+  <div id="pn-Modal" class="pn-modal header-adjust">
+	<div class="pn-modal-content">
+	  <span class="pn-modalclose" id="pn-closeModal">&times;</span>
+	  {% for doc in docs %}
+	  {% for root in doc.roots %}
+	  {% if "modal" in root.tags %}
+	  {{ embed(root) | indent(6) }}
+	  {% endif %}
+	  {% endfor %}
+	  {% endfor %}
+	</div>
+  </div>
 </div>
 
 <script>
@@ -96,6 +110,21 @@
       myLayout.updateSize(window.innerWidth, window.innerHeight)
     }
   });
+
+  var modal = document.getElementById("pn-Modal");
+  var span = document.getElementById("pn-closeModal");
+
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
 </script>
+
+{{ embed(roots.js_area) }}
 
 {% endblock %}
