--- a/panel/template/material/material.html
+++ b/panel/template/material/material.html
@@ -26,7 +26,7 @@
       {% endfor %}
     </section>
     {% if busy %}
-	<div class="busy-container">
+	<div class="pn-busy-container">
 	  {{ embed(roots.busy_indicator) | indent(6) }}
 	</div>
 	{% endif %}
@@ -59,6 +59,19 @@
   {% endfor %}
   {% endfor %}
 </main>
+
+<div id="pn-Modal" class="pn-modal mdc-top-app-bar--fixed-adjust">
+  <div class="pn-modal-content">
+    <span class="pn-modalclose" id="pn-closeModal">&times;</span>
+    {% for doc in docs %}
+	{% for root in doc.roots %}
+	{% if "modal" in root.tags %}
+	{{ embed(root) | indent(4) }}
+	{% endif %}
+	{% endfor %}
+	{% endfor %}
+  </div>
+</div>
 </div>
 
 <script>
@@ -72,7 +85,21 @@
     // Ensure bokeh layout recomputes layout
     window.dispatchEvent(new Event('resize'));
   });
+
+  var modal = document.getElementById("pn-Modal");
+  var span = document.getElementById("pn-closeModal");
+
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
 </script>
 
+{{ embed(roots.js_area) }}
 
 {% endblock %}
